Small fixes
Fixed horizontal scroll bar on projects and history page and some content altercations too

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -90,9 +90,9 @@ img{
 }
 
 .container {
+    overflow-x: hidden;
 	max-width: 1100px;
 	margin: 0 auto;
-	overflow: auto;
 	padding: 0 40px;
 }
 
